--- a/styles/web.scss
+++ b/styles/web.scss
@@ -1,5 +1,5 @@
 pre {
-  @apply overflow-auto whitespace-pre-line break-words rounded-lg border bg-slate-900 p-3;
+  @apply overflow-auto whitespace-pre-line break-words rounded-lg border bg-slate-900 p-3 text-sm;
 }
 
 p {
