--- a/styles/markdown.scss
+++ b/styles/markdown.scss
@@ -1,9 +1,17 @@
 @layer components {
   .markdown {
-    @apply text-slate-800 dark:text-slate-100;
+    pre,
+    code {
+      font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+      display: block;
+      overflow-x: auto;
+      padding: 1em;
+    }
+
     a {
       @apply border-b border-purple-500 text-purple-500 no-underline hover:border-purple-700 hover:text-purple-700;
     }
+
     p:last-child {
       @apply mb-0;
     }
